--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ caso necesario en la carpeta de Público o equipo de Teams. </li>
 			Practica 1<a/></li>
 				<li>Practica 2</li>
 				<li>Practica 3</li>
-				<li><a href="Examen Programacion web I.html">Examen parcial 1</a></li>
+				<li><a href="examendeprogramacion187739.html">Examen parcial 1</a></li>
 				
 		</ol>
 				<li>Parcial 2</li>
