--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@ caso necesario en la carpeta de Público o equipo de Teams. </li>
 					<li><a href="practica 1 parcial 2.html">practica 1 formularios</a></li>
 					<li><a href="estilos.css">practica 2 formularios con css</a></li>
 					<li><a href="Tablas.html">practica 3 tablas con css</a></li>
+					<li><a href="Barra Nav.html">practica 4 Barra de navegacion</a></li>
+
 				</ol>
 				<li>Parcial 3</li>
 				<li>Proyecto final</li>
