--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@ caso necesario en la carpeta de Público o equipo de Teams. </li>
 					<li><a href="estilos.css">practica 2 formularios con css</a></li>
 					<li><a href="Tablas.html">practica 3 tablas con css</a></li>
 					<li><a href="Barra Nav.html">practica 4 Barra de navegacion</a></li>
+					<li><a href="practica6.html">practica 6 Planificación del sitio web </a></li>
+					<li><a href="https://lucid.app/lucidspark/5f1045ec-cde8-4a5f-b2a2-e2bc30602140/edit?viewport_loc=-6082%2C-4254%2C4394%2C3079%2Cs9RcOH2pqRaS&invitationId=inv_eb743acf-8339-40b8-a370-7a4b6494f4aa">practica 6 Planificación del sitio web lucidchar </a></li>
+
 
 				</ol>
 				<li>Parcial 3</li>
