--- a/index.html
+++ b/index.html
@@ -85,9 +85,8 @@ caso necesario en la carpeta de Público o equipo de Teams. </li>
 					<li><a href="Barra Nav.html">practica 4 Barra de navegacion</a></li>
 					<li><a href="practica6.html">practica 6 Planificación del sitio web </a></li>
 					<li><a href="https://lucid.app/lucidspark/5f1045ec-cde8-4a5f-b2a2-e2bc30602140/edit?viewport_loc=-6082%2C-4254%2C4394%2C3079%2Cs9RcOH2pqRaS&invitationId=inv_eb743acf-8339-40b8-a370-7a4b6494f4aa">practica 6 Planificación del sitio web lucidchar </a></li>
-					<li><a href="position.html">Práctica 8 Propiedades position y z-index</a></li>
-					<li><a href="unidadesdemedida.html">Práctica 9 uniades de medida</a></li>
-
+					<li><a href="practica8 parcial 2.html">practica 8 formularios</a></li>
+					<li><a href="examen2.html">Examen Parcial</a></li>
 
 
 				</ol>
