--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ caso necesario en la carpeta de Público o equipo de Teams. </li>
 				<li>Parcial 2</li>
 				<ol>
 					<li><a href="practica 1 parcial 2.html">practica 1 formularios</a></li>
-					<li><a href="practica Forms.html">practica 2 formularios con css</a></li>
+					<li><a href="Practica Forms.html">practica 2 formularios con css</a></li>
 					<li><a href="Tablas.html">practica 3 tablas con css</a></li>
 					<li><a href="Barra Nav.html">practica 4 Barra de navegacion</a></li>
 					<li><a href="practica6.html">practica 6 Planificación del sitio web </a></li>
