--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@ caso necesario en la carpeta de Público o equipo de Teams. </li>
 
 				</ol>
 				<li>Parcial 3</li>
+				<li><a>practica 1</a></li>
+				<li><a>practica 2</a></li>
+				<li><a>practica 3</a></li>
+				<li><a href="ExamprácticoParc3.html">Examen Parcial</a></li>
 				<li>Proyecto final</li>
 		</ul>
 				
