--- a/index.html
+++ b/index.html
@@ -92,11 +92,18 @@ caso necesario en la carpeta de Público o equipo de Teams. </li>
 
 				</ol>
 				<li>Parcial 3</li>
-				<li><a>practica 1</a></li>
+				<li><a href="operacionesMAT.html">practica 1</a></li>
 				<li><a>practica 2</a></li>
-				<li><a>practica 3</a></li>
+				<li><a href="gatosnegros.html">practica 3</a></li>
 				<li><a href="ExamprácticoParc3.html">Examen Parcial</a></li>
 				<li>Proyecto final</li>
+				<li>Proyecto final avance 1</li>
+				<li>Proyecto final avance 2</li>
+				<li>Proyecto final avance 3</li>
+				<li>Proyecto final avance 4</li>
+				<li>Proyecto final avance 5</li>
+				<li>Proyecto final avance 6</li>
+
 		</ul>
 				
 					
