--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!<!DOCTYPE html>
 <!--Desarrollado por: Mendoza Ramirez Luz Elena
 Fecha: 11/02/2025
 primera practica de portafolio--
@@ -108,9 +108,9 @@ caso necesario en la carpeta de Público o equipo de Teams. </li>
 				  <li><a href="Untitled@2x (1).pdf" target="_blank">Ver PDF</a>Proyecto final avance 1</li>
 				  <li><a href="codepagina/indexOLIV.html">Proyecto final avance 2</li>
 				  <li><a href="codepagina/indexOLIV.html">Proyecto final avance 3</li>
-				  <li><a href="codepagina/contactanos.html">Proyecto final avance 4</li>
-				  <li><a href="codepagina/Cuestionario.html">Proyecto final avance 5</li>
-				  <li><a href="codepagina/chatbot.html">Proyecto final avance 6</li>
+				  <li><a href="contactanos.html">Proyecto final avance 4</li>
+				  <li><a href="Cuestionario.html">Proyecto final avance 5</li>
+				  <li><a href="chatbot.html">Proyecto final avance 6</li>
 				</ol>
 
 		</ul>
