--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@ caso necesario en la carpeta de Público o equipo de Teams. </li>
 				  <li><a href="Mapa+de+sitio+de+Lucidchart+(1).pdf" target="_blank">Ver PDF</a>Proyecto final avance 1</li>
 				  <li><a href="Olivo+Bazar+Primer+entrega+de+proyecto.pdf" target="_blank">Ver PDF</a>Proyecto final avance 1</li>
 				  <li><a href="Untitled@2x (1).pdf" target="_blank">Ver PDF</a>Proyecto final avance 1</li>
-				  <li><a href="codepagina/indexOLIV.html">Proyecto final avance 2</li>
-				  <li><a href="codepagina/indexOLIV.html">Proyecto final avance 3</li>
-				  <li><a href="contactanos.html">Proyecto final avance 4</li>
-				  <li><a href="Cuestionario.html">Proyecto final avance 5</li>
-				  <li><a href="chatbot.html">Proyecto final avance 6</li>
+				  <li><a href="PROYECTO FINAL WEB/index.html">Proyecto final avance 2</li>
+				  <li><a href="PROYECTO FINAL WEB/index.html">Proyecto final avance 3</li>
+				  <li><a href="PROYECTO FINAL WEB/contactanos.html">Proyecto final avance 4</li>
+				  <li><a href="6 avance Proyecto web final/Cuestionario.html">Proyecto final avance 5</li>
+				  <li><a href="6 avance Proyecto web final/chatbot.html">Proyecto final avance 6</li>
 				</ol>
 
 		</ul>
