--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@ caso necesario en la carpeta de Público o equipo de Teams. </li>
 
 				<li>Proyecto final Entrega final 25/05/2025</li>
 				<ol>
-				  <li><a href="archivosoliv/_Manual de Programador OLIVO.pdf" target="_blank">Ver PDF</a>Manual de usuario</li>
-				  <li><a href="archivosoliv/Manual de usuario OLIVO (1).pdf" target="_blank">Ver PDF</a>Manual de programador</li>
+				  <li><a href="archivosoliv/Manual de usuario OLIVO (1).pdf" target="_blank">Ver PDF</a>Manual de usuario</li>
+				  <li><a href="archivosoliv/_Manual de Programador OLIVO.pdf" target="_blank">Ver PDF</a>Manual de programador</li>
 		          <li><a href="archivosoliv/CONTRATO FINAL DE DESARROLLO Y ENTREGA DE SITIO WEB.pdf" target="_blank">Ver PDF</a>Contrato</li>
 				  <li><a href="archivosoliv/Recibo_OlivoConceptStore_Luz_Elena.pdf" target="_blank">Ver PDF</a>Recibo</li>
 				  <li><a href="archivosoliv/boceto.pdf" target="_blank">Ver PDF</a>Boceto</li>
